--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
-    <script src="sketch823146.js" type="text/javascript"></script><script src="https://cdn.jsdelivr.net/npm/p5@0.8.0/lib/p5.js" type="text/javascript"></script>
-    </head>
+    <script src="sketch823146.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@0.8.0/lib/p5.js" type="text/javascript"></script>
+</head>
 <body>
 </body>
 
